<resources>
    <string name="app_name">AstraeaQuizApp</string>
    <string name="dict_button_text">Go to Dictionary</string>
    <string name="register_button_text">REGISTER</string>
    <string name="login_button_text">LOGIN</string>
    <string name="image_desc_name">Profile Picture</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>