<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/astraea_background"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="255dp"
            android:layout_height="0dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="#C9FD6EBA"
            android:elevation="20dp"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="256dp"
            android:layout_height="0dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#FDCD69"
            android:elevation="20dp"
            android:text="@string/login_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="395dp"
            android:layout_height="266dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="43dp"
            android:contentDescription="@string/image_desc_name"
            app:layout_constraintBottom_toTopOf="@+id/text_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/astraea_logo" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Password"
            android:textColor="#FE6556"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_address" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="223dp"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/rounded_corner"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <EditText
            android:id="@+id/text_mail"
            android:layout_width="227dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="E-mail"
            android:textColor="#FE6556"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="226dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_corner"
            android:elevation="15dp"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="#050505"
            app:layout_constraintBottom_toTopOf="@+id/text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mail" />

        <Button
            android:id="@+id/checkInternet"
            android:layout_width="111dp"
            android:layout_height="28dp"
            android:layout_marginBottom="48dp"
            android:text="Check Internet"
            app:layout_constraintBottom_toBottomOf="@+id/text_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>