<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/astraea_background"
    tools:context=".RegisterPage">


    <EditText
        android:id="@+id/text_mail2"
        android:layout_width="216dp"
        android:layout_height="0dp"
        android:autofillHints="E-mail"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="none"
        android:text="@string/mail"
        android:textColor="@color/astraea_fon_color1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_username" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="none"
        android:text="@string/username"
        android:textColor="@color/astraea_fon_color1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_mail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/text_password2"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="none"
        android:text="@string/password"
        android:textColor="@color/astraea_fon_color1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:ems="10"
        android:hint="abcd@mail.com"
        android:inputType="textEmailAddress"
        android:textColor="#050505"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/text_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mail2" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="217dp"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:ems="10"
        android:hint="lilalola"
        android:inputType="textEmailAddress"
        android:textColor="#050505"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/text_mail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_username" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:ems="10"
        android:hint="Password Here"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password2" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@color/astraea_button2"
        android:elevation="20dp"
        android:text="@string/register_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="415dp"
        android:layout_height="269dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/image_desc_name"
        app:layout_constraintBottom_toTopOf="@+id/text_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/astraea_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>